# lyrion-minim

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
public/: loading.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: discover.rs  main.rs
src/assets/: loading.html
