[package]
name = "lyrion-minim"
version = "0.1.0"
description = "Lyrion Minim. A minimal desktop client for Lyrion."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "fs-create-dir", "fs-exists", "fs-write-file", "os-all", "window-set-size", "window-set-position", "window-set-decorations", "window-set-resizable", "process-exit", "shell-sidecar", "path-all", "system-tray", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tokio = { version = "1.24.1", features = ["full"] }
nom = "7.1.3"
anyhow = "1.0.71"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
